# Huffman-Archiver

./: CMakeLists.txt
lib/: CMakeLists.txt  archiver.cpp  archiver.h  huffman_tree.cpp  huffman_tree.h
lib/src/: archiver.cpp  huffman_tree.cpp  huffman_tree.h
lib/test/: CMakeLists.txt  tests.cpp
lib/test/gtest/: gtest_main.cc
util/: CMakeLists.txt  Run.cpp
